--- a/ProductService/ProductService.Api/appsettings.json
+++ b/ProductService/ProductService.Api/appsettings.json
@@ -8,5 +8,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5433;Database=ProductDb;Username=postgres;Password=postgreSQL@07"
+    },
+    "Kafka": {
+        "BootstrapServers": "localhost:9092"
     }
 }
