Renamed Auth service and dockerized all the services

--- a/InventoryService/InventoryService.Api/appsettings.json
+++ b/InventoryService/InventoryService.Api/appsettings.json
@@ -6,11 +6,11 @@
         }
     },
     "MongoDB": {
-        "ConnectionString": "mongodb://localhost:27017",
+        "ConnectionString": "mongodb://mongo_db:27017",
         "DatabaseName": "SmartWareInventory"
     },
     "Kafka": {
-        "BootstrapServers": "localhost:9092"
+        "BootstrapServers": "kafka:9092"
     },
     "AllowedHosts": "*"
 }
