--- a/ProductService/ProductService.Api/appsettings.json
+++ b/ProductService/ProductService.Api/appsettings.json
@@ -10,6 +10,6 @@
         "DefaultConnection": "Host=localhost;Port=5433;Database=ProductDb;Username=postgres;Password=postgreSQL@07"
     },
     "Kafka": {
-        "BootstrapServers": "localhost:9092"
+        "BootstrapServers": "kafka:9092"
     }
 }
